
	* src/main/perl/bin/bedrock-create-site.in
	(maybe_create_apache_mod_perl_startup_dot_pl_file_or_die): new function
	(--apache-mod-perl-startup=FILE): new required command line opt
	(--overwrite-apache-mod-perl-startup): new optional command line opt
	(--nooverwrite-apache-mod-perl-startup): new optional command line opt
	($BEDROCK_DIST_DATA_DIR): filter in a build time

	Renamed 'error.roc' to 'error.rock':
	* src/main/resources/htdocs/error.roc:  removed file
	* src/main/resources/htdocs/error.rock: added file
	* src/main/resources/htdocs/Makefile.am
	(dist_htdocs_DATA): Changed 'error.roc' reference to 'error.rock'
	(install-data-hook): New automake augmentation target that creates
	  an 'error.roc' symlink to our installed 'error.rock' file

	* src/main/perl/bin/bedrock-create-site.in
	(maybe_copy_dist_error_dot_rock_or_die): new function
	(--overwrite-error-dot-roc): new command line opt
	(--nooverwrite-error-dot-roc): new command line opt
	(--overwrite-error-dot-rock): new command line opt
	(--nooverwrite-error-dot-rock): new command line opt
	(maybe_copy_dist_bedrock_dot_cgi_or_die): new function
	(--overwrite-bedrock-dot-cgi): new command line opt
	(--nooverwrite-bedrock-dot-cgi): new command line opt
	- Doc updates for all of the above
	($BEDROCK_DIST_CGIBIN_DIR): filter in at build time
	($BEDROCK_DIST_HTDOCS_DIR): filter in at build time

	* src/main/perl/bin/Makefile.am (install-exec-hook): Invoke 'rm -f
	  foo' in front of '$(LN_S) file foo' to allow multiple invocations
	  of 'make install' to work.

	* configure.ac (cgibindir): New AC_SUBST application
	* src/main/perl/cgi-bin/Makefile.am (cgibindir): Moved definition
	  to top-level configure.ac file

	* configure.ac (htdocsdir): New AC_SUBST application
	* src/main/resources/htdocs/Makefile.am (htdocsdir): Moved
	  definition to top-level configure.ac file

	* src/main/resources/Makefile.am (bedrock-perl5-inc-begin-block.snippet):
	  file is now in the 'data_DATA' list rather than the