@@ -2084,6 +2084,16 @@ L<deb(5)>,
 L<debconf(7)>,
 L<rpm(8)>
 
+On Debian (or Debian-derived) systems, you may be interested in the following
+programs that enable and disable apache web sites. At the time of writing
+(2008-03), both are available in the C<apache2.2-common> Debian package:
+
+=over 4
+
+=item C</usr/sbin/a2ensite>
+
+=item C</usr/sbin/a2dissite>
+
 
 =head1 AUTHORS
 
