@@ -6,6 +6,8 @@
 	(--overwrite-apache-mod-perl-startup): new optional command line opt
 	(--nooverwrite-apache-mod-perl-startup): new optional command line opt
 	($BEDROCK_DIST_DATA_DIR): filter in a build time
+	(SEE ALSO): /usr/sbin/a2ensite
+	(SEE ALSO): /usr/sbin/a2dissite
 
 	Renamed 'error.roc' to 'error.rock':
 	* src/main/resources/htdocs/error.roc:  removed file
